--- a/frontend/package.json
+++ b/frontend/package.json
@@ -80,6 +80,7 @@
     "@types/firebase": "^2.4.32",
     "@types/pdfjs-dist": "^2.10.377",
     "@types/react-router-dom": "^5.3.3",
+    "ajv": "^8.17.1",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17"
