--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,5 +1,5 @@
 # Development environment - Local frontend with Cloud Run backend
-REACT_APP_API_URL=http://127.0.0.1:8000/api/v1
+REACT_APP_API_URL=https://healthcare-forms-backend-ubaop6yg4q-uc.a.run.app/api/v1
 REACT_APP_ENVIRONMENT=development
 
 # Firebase Configuration
