--- a/backend-fastapi/Dockerfile.cloudrun
+++ b/backend-fastapi/Dockerfile.cloudrun
@@ -13,6 +13,10 @@ COPY backend-fastapi/models/ ./models/
 COPY backend-fastapi/routers/ ./routers/
 COPY backend-fastapi/services/ ./services/
 
+# Copy service account credentials if they exist
+# For Cloud Run, credentials are provided via metadata service
+# COPY backend-fastapi/healthcare-forms-v2-credentials.json .
+
 # Run as non-root user
 RUN useradd -m -u 1000 appuser && chown -R appuser:appuser /app
 USER appuser
