--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,3 @@
-REACT_APP_API_URL=https://healthcare-forms-backend-ubaop6yg4q-uc.a.run.app/api/v1
+REACT_APP_API_URL=https://healthcare-forms-backend-go-673381373352.us-central1.run.app/api
 REACT_APP_BASE_URL=https://healthcare-forms-backend-ubaop6yg4q-uc.a.run.app
 REACT_APP_ENVIRONMENT=production
