--- a/backend-go/Dockerfile.alpine
+++ b/backend-go/Dockerfile.alpine
@@ -1,39 +1,58 @@
-# Use the official Golang image to create a build artifact.
-# This is the "builder" stage.
+# Multi-stage Alpine build for Go backend
+# Stage 1: Build the Go binary
 FROM golang:1.24-alpine AS builder
 
-# Set the Current Working Directory inside the container
+# Install build dependencies
+RUN apk add --no-cache git gcc musl-dev
+
+# Set working directory
 WORKDIR /app
 
-# Copy go mod and sum files
+# Copy go mod files
 COPY go.mod go.sum ./
 
-# Download all dependencies. Dependencies will be cached if the go.mod and go.sum files are not changed
+# Download dependencies
 RUN go mod download
 
-# Copy the source code
+# Copy source code
 COPY . .
 
-# Build the Go app
-# -o /app/main: output the executable to /app/main
-# -ldflags "-w -s": strip debug information to reduce binary size
-RUN CGO_ENABLED=0 GOOS=linux go build -a -ldflags "-w -s" -o /app/main ./cmd/server
+# Build the binary with static linking for linux/amd64
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build \
+    -ldflags="-w -s -extldflags '-static'" \
+    -a -installsuffix cgo \
+    -o server cmd/server/main.go
 
-# Use a minimal image to run the compiled binary.
-# This is the "runner" stage.
-FROM alpine:latest
+# Stage 2: Create minimal runtime image
+FROM alpine:3.19
 
-# Add ca-certificates for HTTPS calls
-RUN apk --no-cache add ca-certificates
+# Install ca-certificates for HTTPS and timezone data
+RUN apk add --no-cache ca-certificates tzdata
 
-# Set the Current Working Directory inside the container
-WORKDIR /root/
+# Create non-root user for security
+RUN adduser -D -u 1000 appuser
 
-# Copy the Pre-built binary file from the previous stage
-COPY --from=builder /app/main .
+# Set working directory
+WORKDIR /app
 
-# Expose port 8080 to the outside world
+# Copy binary from builder
+COPY --from=builder /app/server .
+
+# Copy templates directory if it exists
+COPY --from=builder /app/templates ./templates
+
+# Set ownership to non-root user
+RUN chown -R appuser:appuser /app
+
+# Switch to non-root user
+USER appuser
+
+# Expose port
 EXPOSE 8080
 
-# Command to run the executable
-CMD ["./main"]
+# Health check endpoint
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+    CMD wget --no-verbose --tries=1 --spider http://localhost:8080/health || exit 1
+
+# Run the binary
+CMD ["./server"]
