--- a/backend-go/Dockerfile
+++ b/backend-go/Dockerfile
@@ -1,37 +1,34 @@
+# Multi-stage build for secure Go backend
 # Stage 1: Build the Go binary
 FROM golang:1.24-alpine AS builder
 
 WORKDIR /app
 
-# Copy module files and download dependencies
+# Copy go mod files first (better layer caching)
 COPY go.mod go.sum ./
 RUN go mod download
 
-# Copy the rest of the source code
+# Copy source code
 COPY . .
 
-# Build the application, creating a static binary
-RUN CGO_ENABLED=0 GOOS=linux go build -a -ldflags "-s -w" -o /app/main cmd/server/main.go
+# Build static binary with security flags
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build \
+    -ldflags="-w -s -extldflags '-static'" \
+    -a -installsuffix cgo \
+    -o server cmd/server/main.go
 
-# Stage 2: Create the final image with Chrome
-FROM debian:bookworm-slim
+# Stage 2: Google Distroless (perfect for GCP)
+FROM gcr.io/distroless/static-debian12:nonroot
 
-# Set DEBIAN_FRONTEND to noninteractive to avoid prompts
-ENV DEBIAN_FRONTEND=noninteractive
+# Copy the binary
+COPY --from=builder /app/server /server
 
-# Install dependencies for Chrome
-RUN apt-get update && apt-get install -y --no-install-recommends chromium && rm -rf /var/lib/apt/lists/*
+# No templates needed - PDF generation moved to Gotenberg service
 
+# The nonroot image includes a non-root user by default (65532)
+# No need to create one!
 
+EXPOSE 8080
 
-WORKDIR /app
-
-# Copy the Go binary from the builder stage
-COPY --from=builder /app/main /app/main
-
-# Create a non-root user
-RUN adduser --system --group nonroot
-USER nonroot
-
-# Set the entrypoint
-ENTRYPOINT ["/app/main"]
+# Run the binary
+ENTRYPOINT ["/server"]
