--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,25 +2,18 @@
 steps:
   # Build backend Docker image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/healthcare-forms-backend:$COMMIT_SHA', './backend-fastapi']
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/healthcare-forms-backend:latest', './backend-go']
     id: 'build-backend'
 
-  # Build frontend Docker image
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/healthcare-forms-frontend:$COMMIT_SHA', './frontend']
-    id: 'build-frontend'
+  
 
   # Push backend image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/healthcare-forms-backend:$COMMIT_SHA']
+    args: ['push', 'gcr.io/$PROJECT_ID/healthcare-forms-backend:latest']
     id: 'push-backend'
     waitFor: ['build-backend']
 
-  # Push frontend image to Container Registry
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/healthcare-forms-frontend:$COMMIT_SHA']
-    id: 'push-frontend'
-    waitFor: ['build-frontend']
+  
 
   # Deploy backend to Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -28,16 +21,17 @@ steps:
     args:
       - 'run'
       - 'deploy'
-      - 'healthcare-forms-backend'
+      - 'healthcare-forms-backend-go'
       - '--image'
-      - 'gcr.io/$PROJECT_ID/healthcare-forms-backend:$COMMIT_SHA'
+      - 'gcr.io/$PROJECT_ID/healthcare-forms-backend:latest'
       - '--region'
       - 'us-central1'
       - '--platform'
       - 'managed'
       - '--allow-unauthenticated'
+      - '--port=8080'
       - '--set-env-vars'
-      - 'GOOGLE_APPLICATION_CREDENTIALS=/app/healthcare-forms-v2-credentials.json'
+      - 'GOTENBERG_URL=https://gotenberg-673381373352.us-central1.run.app,GCP_PROJECT_ID=$PROJECT_ID'
       - '--memory'
       - '512Mi'
       - '--cpu'
@@ -51,28 +45,7 @@ steps:
     id: 'deploy-backend'
     waitFor: ['push-backend']
 
-  # Deploy frontend to Cloud Run
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    entrypoint: gcloud
-    args:
-      - 'run'
-      - 'deploy'
-      - 'healthcare-forms-frontend'
-      - '--image'
-      - 'gcr.io/$PROJECT_ID/healthcare-forms-frontend:$COMMIT_SHA'
-      - '--region'
-      - 'us-central1'
-      - '--platform'
-      - 'managed'
-      - '--allow-unauthenticated'
-      - '--memory'
-      - '256Mi'
-      - '--cpu'
-      - '1'
-      - '--port'
-      - '80'
-    id: 'deploy-frontend'
-    waitFor: ['push-frontend']
+  
 
 # Timeout for the entire build
 timeout: '1200s'
@@ -82,9 +55,3 @@ options:
   machineType: 'E2_HIGHCPU_8'
   substitution_option: 'ALLOW_LOOSE'
 
-# Tag images with latest after successful deployment
-images:
-  - 'gcr.io/$PROJECT_ID/healthcare-forms-backend:$COMMIT_SHA'
-  - 'gcr.io/$PROJECT_ID/healthcare-forms-backend:latest'
-  - 'gcr.io/$PROJECT_ID/healthcare-forms-frontend:$COMMIT_SHA'
-  - 'gcr.io/$PROJECT_ID/healthcare-forms-frontend:latest'
